hphp/hack/test/typecheck/array/disallow_empty_varray_where_dict_like_array_is_required.php.like_types.exp
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 4, characters 10-17:
Invalid return type (Typing[4110])
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 3, characters 24-29:
Expected ~string because it is an unenforceable type
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 4, characters 10-17:
But got int
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 4, characters 10-17:
This can only be indexed with integers
